--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -9,3 +9,6 @@ jobs:
     
     steps:
       - run: echo "This is running inside a ${{ runner.os }} server in GitHub"
+      - name: Check out source code
+        uses: actions/checkout@v3.5.3
+      - run: echo "This repo is ${{ github.repository }} .."
