--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/checkout@v3.5.3
       - run: echo "This repo is ${{ github.repository }} .."
       - name: Run a inline script
-        run:
+        run: |
           mkdir newfolder
           ls -l
