--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   Selenium_Test_Job1:
     name: Selenium Test Job
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     
     steps:
       - run: echo "This is running inside a ${{ runner.os }} server in GitHub"
@@ -19,4 +19,4 @@ jobs:
         shell: bash
       - name: Run a script file from repo
         run: sh ./run.sh
-        shell: bash
+        shell: pwsh
