--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -20,3 +20,11 @@ jobs:
       - name: Run a script file from repo
         run: sh ./run.sh
         shell: pwsh
+        
+  Selenium_Test_Job2:
+    name: Selenium Test Job 2
+    runs-on: ubuntu-latest
+    
+    steps:
+      - run: echo "This is from second job"
+
