--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -14,17 +14,22 @@ jobs:
       - run: echo "This repo is ${{ github.repository }} .."
       - name: Run a inline script
         run: |
-          mkdir newfolder
+          dasdfedsfd
           ls -l
         shell: bash
       - name: Run a script file from repo
+        if: ${{ always() }}
         run: sh ./run.sh
         shell: pwsh
+      - name: Execute during failure
+        if: ${{ failure() }}
+        run: echo "One of the step seems failed"
         
   Selenium_Test_Job2:
     name: Selenium Test Job 2
     runs-on: ubuntu-latest
     needs: Selenium_Test_Job1
+    if: ${{ always() }}
     
     steps:
       - run: echo "This is from second job"
